--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/info.html
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/info.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="dist/style.css">
     <link rel="stylesheet" href="dist/nav.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <title>home</title>
+    <title>Info</title>
 </head>
 
 <body>
@@ -25,12 +25,13 @@
                     </ul>
                 </nav>
             </div>
+            <div id="control__mysasks"></div>
         </div>
-        <div id="landing__logo"></div>
-        <div id="landing__search"></div>
-        <div id="landing__task"></div>
-        <div id="landing__recent"></div>
+        <div id="task__count"></div>
+        <div id="task__descr"></div>
+        <div id="task__cal"></div>
     </div>
+
 </body>
 
 </html>
