hopefully last nav change by me

--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/monthly-tasks.html
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/monthly-tasks.html
@@ -19,9 +19,9 @@
                     <span class="material-icons">menu</span>
                 </label>
                 <input type="checkbox" id="control__nav__toggle">
-                <nav id="hidden">
+                <nav class="hidden">
                     <ul>
-                        <li><a href="home.html"><i class="material-icons white-color">home</i></a></li>
+                        <li><a href="home.html"><i class="material-icons ">home</i></a></li>
                         <li><a href="info.html"><i class="material-icons white-color">email</i></a></li>
                         <li><a href="#"><i class="material-icons white-color">pie_chart</i></a></li>
                         <li id="monthly-tasks"><a href="monthly-tasks.html"><i
