--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/monthly-tasks.html
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/monthly-tasks.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="dist/style.css">
     <link rel="stylesheet" href="dist/nav.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <title>Monthly Tasks</title>
 </head>
 
@@ -30,6 +33,7 @@
                 </nav>
             </div>
             <h1 id="control__mytasks">my tasks</h1>
+            <h3>9</h3>
         </div>
         <div id="task__count"></div>
         <div id="task__descr"></div>
