--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/home.html
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/home.html
@@ -26,10 +26,46 @@
                 </nav>
             </div>
         </div>
-        <div id="landing__logo"></div>
-        <div id="landing__search"></div>
-        <div id="landing__task"></div>
-        <div id="landing__recent"></div>
+        <div id="landing-home">
+            <div id="landing-home__logo">
+                <h1>David James <br><span>Project Manager</span></h1>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ51Gk5jjB4qD-BkcDh_fhsE4HkfnLDblQPrQLaOY13u7v5MNoBea8JzZ5NZAa0G-gAcgY&usqp=CAU"
+                    alt="">
+            </div>
+            <div id="landing-home__search">
+                <input type="text" placeholder="Search..">
+            </div>
+
+
+            <div id="landing-home__task">
+                <h2>My Tasks</h2>
+                <div class="task">
+                    <div class="icon icon__1"><i class="material-icons">list_alt</i></div>
+                    <p>To do</p>
+                    <p>5 tasks</p>
+                </div>
+                <div class="task">
+                    <div class="icon icon__2"><i class="material-icons">drive_file_rename_outline</i></div>
+                    <p>In progress</p>
+                    <p>3 tasks</p>
+
+                </div>
+                <div class="task">
+                    <div class="icon icon__3"><i class="material-icons">check_circle_outline</i>
+                    </div>
+                    <p>Done</p>
+                    <p>12 tasks</p>
+
+                </div>
+            </div>
+            <div id="landing-home__recent">
+                <div class="recent__title">
+                    <h2>Recently Created</h2>
+                    <i class="material-icons">keyboard_arrow_right</i>
+
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
