--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/cartpage.html
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/cartpage.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/36261c0ffe.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="cartPage">
     <div class="header_categories">
         <div class="icon" style="font-size: 44px;">
             <i class="fas fa-long-arrow-alt-left"></i>
@@ -22,10 +22,43 @@
         <div class="myCart__grid__title">
             <h1>My Cart</h1>
         </div>
-        <div class="myCart__grid__box"> </div>
-        <div class="myCart__grid__box"> </div>
-        <div class="myCart__grid__box"> </div>
-        
+        <div class="myCart__grid__box">
+            <img src="imgCart/myCart1.jpg">
+            <div class="leftside">
+                <h3>Dracaena Houseplant</h3>
+                <p>Nontoxic</p>
+                <input type="number" min="1" value="1">
+            </div>
+            <div class="rightside">
+                <i class="far fa-trash-alt"></i>
+                <h3>$14.00</h3>
+            </div>
+        </div>
+        <div class="myCart__grid__box"> 
+            <img src="imgCart/myCart2.jpg">
+            <div class="leftside">
+                <h3>Milanus</h3>
+                <p>Nontoxic</p>
+                <input type="number" min="1" value="1">
+            </div>
+            <div class="rightside">
+                <i class="far fa-trash-alt"></i>
+                <h3>$14.00</h3>
+            </div>
+        </div>
+        <div class="myCart__grid__box"> 
+            <img src="imgCart/myCart3.jpg">
+            <div class="leftside">
+                <h3>Euonymus</h3>
+                <p>Nontoxic</p>
+                <input type="number" min="1" value="1">
+            </div>
+            <div class="rightside">
+                <i class="far fa-trash-alt"></i>
+                <h3>$14.00</h3>
+            </div>
+        </div>
+
 
 
     </div>
