--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/cartpage.html
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/cartpage.html
@@ -34,7 +34,7 @@
                 <h3>$14.00</h3>
             </div>
         </div>
-        <div class="myCart__grid__box"> 
+        <div class="myCart__grid__box">
             <img src="imgCart/myCart2.jpg">
             <div class="leftside">
                 <h3>Milanus</h3>
@@ -46,7 +46,7 @@
                 <h3>$14.00</h3>
             </div>
         </div>
-        <div class="myCart__grid__box"> 
+        <div class="myCart__grid__box">
             <img src="imgCart/myCart3.jpg">
             <div class="leftside">
                 <h3>Euonymus</h3>
@@ -64,7 +64,19 @@
     </div>
 
 
-    <div class="checkout"></div>
+    <div class="checkout">
+
+        <h3>Subtotal</h3>
+        <h3>$42.00</h3>
+
+        <p>Shipping fee</p>
+        <p>$1.00</p>
+        <hr>
+        <h2>Total</h2>
+        <h2>$43.00</h2>
+        <button class="button__add">Add more</button>
+        <button class="button__checkout">Checkout</button>
+    </div>
 </body>
 
 </html>
