--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/monthly-tasks.html
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/monthly-tasks.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="dist/nav.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <title>Monthly Tasks</title>
 </head>
 
@@ -25,10 +25,10 @@
                 <nav class="hidden">
                     <ul>
                         <li><a href="home.html"><i class="material-icons ">home</i></a></li>
-                        <li><a href="info.html"><i class="material-icons white-color">email</i></a></li>
                         <li><a href="#"><i class="material-icons white-color">pie_chart</i></a></li>
                         <li id="monthly-tasks"><a href="monthly-tasks.html"><i
                                     class="material-icons white-color">grid_view</i></a></li>
+                        <li><a href="info.html"><i class="material-icons white-color">info</i></a></li>
                     </ul>
                 </nav>
             </div>
