--- a/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/Wallet.html
+++ b/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/Wallet.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wallet</title>
+    <link rel="stylesheet" href="dist/style.css">
 </head>
+
 <body>
     <div class="header">
         <button class="header__icon"></button>
@@ -30,5 +33,26 @@
             <div class="wallet-value__graph__change">▲ € 31.800,52 (21,1%)</div>
         </div>
     </div>
+    <div class="portfolio">
+        <div class="portfolio__title">
+            <h2>Portfolio</h2>
+            <div class="portfolio__title__indicators">VOL / MACD / KDJ / RSI</div>
+        </div>
+        <div class="portfolio__list">
+            <div class="portfolio__list__item">
+                <div class="portfolio__list__item__icon"></div>
+                <div class="portfolio__list__item__name">
+                    <h3>ROSE</h3>
+                    <h4>OASIS NETWORK</h4>
+                </div>
+                <div class="portfolio__list__item__graph"></div>
+                <div class="portfolio__list__item__price">
+                    <h3>12.500</h3>
+                    <h4>€ 0,187200</h4>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
