--- a/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/Wallet.html
+++ b/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/Wallet.html
@@ -17,36 +17,36 @@
         <button class="header__icon"></button>
     </div>
     <div class="wallet-banner">
-        <div class="waller-banner__item"></div>
-        <div class="waller-banner__item"></div>
-        <div class="waller-banner__item"></div>
-        <div class="waller-banner__item"></div>
-        <div class="waller-banner__item"></div>
-        <div class="waller-banner__item"></div>
+        <div class="wallet-banner__item"></div>
+        <div class="wallet-banner__item"></div>
+        <div class="wallet-banner__item"></div>
+        <div class="wallet-banner__item"></div>
+        <div class="wallet-banner__item"></div>
+        <div class="wallet-banner__item"></div>
     </div>
     <div class="wallet-value">
         <div class="wallet-value__avrage">MA / EMA</div>
         <div class="wallet-value__max">185.701,18</div>
         <div class="wallet-value__graph">
-            <div class="wallet-value__graph__title">WALLET VALUE</div>
-            <div class="wallet-value__graph__sum">€ 182.057,82</div>
-            <div class="wallet-value__graph__change">▲ € 31.800,52 (21,1%)</div>
+            <h2>WALLET VALUE</h2>
+            <h1>€ 182.057,82</h1>
+            <h2>▲ € 31.800,52 (21,1%)</h2>
         </div>
     </div>
-    <div class="portfolio">
-        <div class="portfolio__title">
+    <div class="wallet-portfolio">
+        <div class="wallet-portfolio__title">
             <h2>Portfolio</h2>
-            <div class="portfolio__title__indicators">VOL / MACD / KDJ / RSI</div>
+            <div class="wallet-portfolio__title__indicators">VOL / MACD / KDJ / RSI</div>
         </div>
-        <div class="portfolio__list">
-            <div class="portfolio__list__item">
-                <div class="portfolio__list__item__icon"></div>
-                <div class="portfolio__list__item__name">
+        <div class="wallet-portfolio__list">
+            <div class="wallet-portfolio__list__item">
+                <div class="wallet-portfolio__list__item__icon"></div>
+                <div class="wallet-portfolio__list__item__name">
                     <h3>ROSE</h3>
                     <h4>OASIS NETWORK</h4>
                 </div>
-                <div class="portfolio__list__item__graph"></div>
-                <div class="portfolio__list__item__price">
+                <div class="wallet-portfolio__list__item__graph"></div>
+                <div class="wallet-portfolio__list__item__price">
                     <h3>12.500</h3>
                     <h4>€ 0,187200</h4>
                 </div>
