shani plant page

--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/cartpage.html
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/cartpage.html
@@ -65,17 +65,26 @@
 
 
     <div class="checkout">
+        <div class="h3">
+            <h3>Subtotal</h3>
+            <h3>$42.00</h3>
+        </div>
 
-        <h3>Subtotal</h3>
-        <h3>$42.00</h3>
-
-        <p>Shipping fee</p>
-        <p>$1.00</p>
+        <div class="p">
+            <p>Shipping fee</p>
+            <p>$1.00</p>
+        </div>
         <hr>
-        <h2>Total</h2>
-        <h2>$43.00</h2>
-        <button class="button__add">Add more</button>
-        <button class="button__checkout">Checkout</button>
+
+        <div class="h2">
+            <h2>Total</h2>
+            <h2>$43.00</h2>
+        </div>
+
+        <div class="button">
+            <button class="button__add">Add more</button>
+            <button class="button__checkout">Checkout</button>
+        </div>
     </div>
 </body>
 
