--- a/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/Wallet.html
+++ b/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/Wallet.html
@@ -16,37 +16,52 @@
         <button class="header__item">Cards</button>
         <button class="header__icon"></button>
     </div>
-    <div class="wallet-banner">
-        <div class="wallet-banner__item"></div>
-        <div class="wallet-banner__item"></div>
-        <div class="wallet-banner__item"></div>
-        <div class="wallet-banner__item"></div>
-        <div class="wallet-banner__item"></div>
-        <div class="wallet-banner__item"></div>
-    </div>
-    <div class="wallet-value">
-        <div class="wallet-value__avrage">MA / EMA</div>
-        <div class="wallet-value__max">185.701,18</div>
-        <div class="wallet-value__graph">
-            <h1>€ 182.057,82</h1>
+    <div class="wallet">
+        <div class="wallet-banner">
+            <div class="wallet-banner__item">ROSE 36%</div>
+            <div class="wallet-banner__item">AVAX 24%</div>
+            <div class="wallet-banner__item">LINK 18%</div>
+            <div class="wallet-banner__item">BUSD 21%</div>
+            <div class="wallet-banner__item">DOGE 69%</div>
+            <div class="wallet-banner__item">BTC 15%</div>
         </div>
-    </div>
-    <div class="wallet-portfolio">
-        <div class="wallet-portfolio__title">
-            <h2>Portfolio</h2>
-            <div class="wallet-portfolio__title__indicators">VOL / MACD / KDJ / RSI</div>
+        <div class="wallet-value">
+            <div class="wallet-value__avrage"><span> MA /</span> EMA</div>
+            <div class="wallet-value__max">185.701,18</div>
+            <div class="wallet-value__graph">
+                <h1>€ 182.057,83</h1>
+            </div>
         </div>
-        <div class="wallet-portfolio__list">
-            <div class="wallet-portfolio__list__item">
-                <div class="wallet-portfolio__list__item__icon"></div>
-                <div class="wallet-portfolio__list__item__name">
-                    <h3>ROSE</h3>
-                    <h4>OASIS NETWORK</h4>
-                </div>
-                <div class="wallet-portfolio__list__item__graph"></div>
-                <div class="wallet-portfolio__list__item__price">
-                    <h3>12.500</h3>
-                    <h4>€ 0,187200</h4>
+        <div class="wallet-portfolio">
+            <div class="wallet-portfolio__title">
+                <h2>Portfolio</h2>
+                <div class="wallet-portfolio__title__indicators">VOL / MACD / KDJ / RSI</div>
+            </div>
+            <div class="wallet-portfolio__list">
+                <div class="wallet-portfolio__list__item">
+                    <div class="wallet-portfolio__list__item__icon"> <svg 
+                        viewBox="0 0 128 128">
+                   
+                       <g class="st0">
+                           <path d="M115,25.4C105.3,13,91.1,5.1,75.4,5.1C45,5.1,22.7,33.4,22.7,64c0,21.3,14.2,37.3,29.9,37.3
+                               c1.5,0,2.9-0.1,4.4-0.4C46.4,93.2,39.7,79.2,39.7,64c0-24.2,16.4-43.1,35.7-43.1c21.1,0,35.7,20.9,35.7,43.1
+                               c-0.1,16.4-5.9,32.7-16.2,44.7c-9,10.5-20.6,17.1-33.4,19.2c0,0,1.1,0.1,2.5,0.1c35.3,0,64-28.7,64-64
+                               C128,49.5,123.2,36.1,115,25.4z M105.3,64c0-21.3-14.2-37.3-29.9-37.3c-1.5,0-2.9,0.1-4.4,0.4C81.6,34.8,88.3,48.8,88.3,64
+                               c0,24.2-16.4,43.1-35.7,43.1c-21.1,0-35.7-20.9-35.7-43.1c0.1-16.4,5.9-32.7,16.2-44.7c9-10.5,20.6-17.1,33.4-19.2
+                               c0,0-1.1-0.1-2.5-0.1C28.7,0,0,28.7,0,64c0,14.5,4.8,27.9,13,38.6c9.7,12.4,23.9,20.2,39.6,20.2C83,122.9,105.3,94.6,105.3,64z"/>
+                       </g>
+                   
+                   </svg>
+                   </div>
+                    <div class="wallet-portfolio__list__item__name">
+                        <p>ROSE</p>
+                        <p>OASIS NETWORK</p>
+                    </div>
+                    <div class="wallet-portfolio__list__item__graph"></div>
+                    <div class="wallet-portfolio__list__item__price">
+                        <p>12.500</p>
+                        <p class="red">€ 0,187200</p>
+                    </div>
                 </div>
             </div>
         </div>
