--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/cartpage.html
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/cartpage.html
@@ -81,7 +81,7 @@
             <h2>$43.00</h2>
         </div>
 
-        <div class="button">
+        <div class="buttons">
             <button class="button__add">Add more</button>
             <button class="button__checkout">Checkout</button>
         </div>
