--- a/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/Wallet.html
+++ b/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/Wallet.html
@@ -81,11 +81,11 @@
             <div class="footer-container__exchange">
 
                 <svg viewBox="115.55 75.626 40.841 45.048">
-                    <path class="st6" d="M153.07,111.86l-14.25,8.02c-1.92,1.08-4.27,1.06-6.17-0.07l-14.07-8.33c-1.9-1.12-3.05-3.17-3.03-5.38
+                    <path d="M153.07,111.86l-14.25,8.02c-1.92,1.08-4.27,1.06-6.17-0.07l-14.07-8.33c-1.9-1.12-3.05-3.17-3.03-5.38
 			        l0.18-16.35c0.02-2.2,1.22-4.23,3.14-5.31l14.25-8.02c1.92-1.08,4.27-1.06,6.17,0.07l14.07,8.33c1.9,1.12,3.05,3.17,3.03,5.38
 			        l-0.18,16.35C156.19,108.76,154.99,110.78,153.07,111.86z"></path>
-                    <circle class="st7" cx="140.24" cy="98.16" r="6.56"></circle>
-                    <circle class="st8" cx="131.9" cy="98.16" r="6.56"></circle>
+                    <circle class="st1" cx="140.24" cy="98.16" r="6.56"></circle>
+                    <circle class="st2" cx="131.9" cy="98.16" r="6.56"></circle>
                 </svg>
             </div>
             <div class="footer-container__wallet">
