--- a/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/Wallet.html
+++ b/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/Wallet.html
@@ -57,7 +57,9 @@
                         <p>ROSE</p>
                         <p>OASIS NETWORK</p>
                     </div>
-                    <div class="wallet-portfolio__list__item__graph"></div>
+                    <div class="wallet-portfolio__list__item__graph">
+                        <img src="https://gcdn.pbrd.co/images/VQXu5uhqiJAe.png?o=1">
+                    </div>
                     <div class="wallet-portfolio__list__item__price">
                         <p>12.500</p>
                         <p class="--red">€ 0,187200</p>
