--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/plantCard.html
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/plantCard.html
@@ -18,7 +18,7 @@
                 <h1>cactus</h1>
                 <h2>robust & dynamic</h2>
             </div>
-            <div class="plantCard__details--picture"> <img src="images/cactus.png"> </div>
+            <div class="plantCard__details--picture"> <img src="imgCard/cactus.png"> </div>
             <div class="plantCard__details__type__01">
                 <h3>Type</h3>
                 <h4>Indoor</h4>
