--- a/01-HTML-CSS/08-Responsive/michaeldub/mishatemp/index.html
+++ b/01-HTML-CSS/08-Responsive/michaeldub/mishatemp/index.html
@@ -37,7 +37,7 @@
 
         <div class="schetitle__min">
             <h2>
-                40min
+                40 min
             </h2>
         </div>
 
@@ -70,6 +70,8 @@
 
         <div class="schecards__card">
 
+                <div class="circle"></div>
+
             <div class="date">
                 <p>
                     1
@@ -91,6 +93,8 @@
         </div>
 
         <div class="schecards__card">
+
+            <div class="circle"></div>
 
             <div class="date">
                 <p>
@@ -114,6 +118,8 @@
 
         <div class="schecards__card">
 
+            <div class="circle"></div>
+
             <div class="date">
                 <p>
                     3
@@ -135,6 +141,8 @@
         </div>
 
         <div class="schecards__card">
+
+            <div class="circle"></div>
 
             <div class="date">
                 <p>
@@ -158,6 +166,8 @@
 
         <div class="schecards__card">
 
+            <div class="circle"></div>
+
             <div class="date">
                 <p>
                     5
@@ -179,6 +189,8 @@
         </div>
 
         <div class="schecards__card">
+
+            <div class="circle"></div>
 
             <div class="date">
                 <p>
@@ -202,6 +214,8 @@
 
         <div class="schecards__card">
 
+            <div class="circle"></div>
+
             <div class="date">
                 <p>
                     7
@@ -223,6 +237,8 @@
         </div>
 
         <div class="schecards__card">
+
+            <div class="circle"></div>
 
             <div class="date">
                 <p>
@@ -246,6 +262,8 @@
 
         <div class="schecards__card">
 
+            <div class="circle"></div>
+
             <div class="date">
                 <p>
                     9
@@ -267,6 +285,8 @@
         </div>
 
         <div class="schecards__card">
+
+            <div class="circle"></div>
 
             <div class="date">
                 <p>
@@ -290,6 +310,8 @@
 
         <div class="schecards__card">
 
+            <div class="circle"></div>
+
             <div class="date">
                 <p>
                     11
@@ -311,6 +333,8 @@
         </div>
 
         <div class="schecards__card">
+
+            <div class="circle"></div>
 
             <div class="date">
                 <p>
@@ -334,6 +358,8 @@
 
         <div class="schecards__card">
 
+            <div class="circle"></div>
+
             <div class="date">
                 <p>
                     13
@@ -355,6 +381,8 @@
         </div>
 
         <div class="schecards__card">
+
+            <div class="circle"></div>
 
             <div class="date">
                 <p>
@@ -378,6 +406,8 @@
 
         <div class="schecards__card">
 
+            <div class="circle"></div>
+
             <div class="date">
                 <p>
                     15
@@ -399,6 +429,8 @@
         </div>
 
         <div class="schecards__card">
+
+            <div class="circle"></div>
 
             <div class="date">
                 <p>
@@ -422,6 +454,8 @@
 
         <div class="schecards__card">
 
+            <div class="circle"></div>
+
             <div class="date">
                 <p>
                     17
@@ -443,6 +477,8 @@
         </div>
 
         <div class="schecards__card">
+
+            <div class="circle"></div>
 
             <div class="date">
                 <p>
@@ -466,6 +502,8 @@
 
         <div class="schecards__card">
 
+            <div class="circle"></div>
+
             <div class="date">
                 <p>
                     19
@@ -487,6 +525,8 @@
         </div>
 
         <div class="schecards__card">
+
+            <div class="circle"></div>
 
             <div class="date">
                 <p>
@@ -510,6 +550,8 @@
 
         <div class="schecards__card">
 
+            <div class="circle"></div>
+
             <div class="date">
                 <p>
                     21
@@ -531,6 +573,8 @@
         </div>
 
         <div class="schecards__card">
+
+            <div class="circle"></div>
 
             <div class="date">
                 <p>
@@ -554,6 +598,8 @@
 
         <div class="schecards__card">
 
+            <div class="circle"></div>
+
             <div class="date">
                 <p>
                     23
@@ -575,6 +621,8 @@
         </div>
 
         <div class="schecards__card">
+
+            <div class="circle"></div>
 
             <div class="date">
                 <p>
@@ -598,6 +646,8 @@
 
         <div class="schecards__card">
 
+            <div class="circle"></div>
+
             <div class="date">
                 <p>
                     25
@@ -619,6 +669,8 @@
         </div>
 
         <div class="schecards__card">
+
+            <div class="circle"></div>
 
             <div class="date">
                 <p>
@@ -642,6 +694,8 @@
 
         <div class="schecards__card">
 
+            <div class="circle"></div>
+
             <div class="date">
                 <p>
                     27
@@ -663,6 +717,8 @@
         </div>
 
         <div class="schecards__card">
+
+            <div class="circle"></div>
 
             <div class="date">
                 <p>
@@ -686,6 +742,8 @@
 
         <div class="schecards__card">
 
+            <div class="circle"></div>
+
             <div class="date">
                 <p>
                     29
@@ -708,6 +766,8 @@
 
         <div class="schecards__card">
 
+            <div class="circle"></div>
+
             <div class="date">
                 <p>
                     30
@@ -729,6 +789,8 @@
         </div>
 
         <div class="schecards__card">
+
+            <div class="circle"></div>
 
             <div class="date">
                 <p>
@@ -761,11 +823,15 @@
             <p>Your Progress</p>
         </div>
         <div class="progress__bar">
-            bar
+            <div class="progress__bar__pbar"></div>
+            <div class="progress__bar__btn">
+            
+            </div>
         </div>
         <div class="progress__mins">
-            40 min/<span>150 min</span>
+            40 min /<span> 150 min</span>
         </div>
+
     </section>
 
     <section class="image">
