--- a/02-JavaScript/02-loops/Etan/index.html
+++ b/02-JavaScript/02-loops/Etan/index.html
@@ -9,8 +9,21 @@
 </head>
 
 <body>
-    <script src="index.js"></script>
+    
+    <form>
+value 1: <input type="text" id="value1">
+value 2: <input type="text" id="value2">
+Operator:
+<select id="operator">
+    <option value="add">Add</option>
+    <option value="min">Minus</option>
+    <option value="div">Divide</option>
+    <option value="multi">Multiply</option>
+</select>
+<button type="button" onclick="calc()">Calculate</button>
+    </form>
 
+    <div id="result"></div>
 </body>
-
+<script src="index.js"></script>
 </html>
