--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/home.html
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/home.html
@@ -62,7 +62,11 @@
                 <div class="recent__title">
                     <h2>Recently Created</h2>
                     <i class="material-icons">keyboard_arrow_right</i>
-
+                </div>
+                <div class="recent-box">
+                    <div class="recent-box__1"></div>
+                    <div class="recent-box__2"></div>
+                    <div class="recent-box__3"></div>
                 </div>
             </div>
         </div>
