--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/monthly-tasks.html
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/monthly-tasks.html
@@ -9,8 +9,14 @@
     <link rel="stylesheet" href="dist/nav.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+
+
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+
     <title>Monthly Tasks</title>
     <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
 </head>
@@ -34,91 +40,232 @@
                 </nav>
             </div>
             <div id="control__mytasks">
-                <h1>my tasks</h1>
-                <h3>9</h3>
+                <h3>my tasks</h3>
+                <div id="control__mytasks-square">
+                    <h3>9</h3>
+                </div>
             </div>
-            
+
         </div>
         <main>
             <div id="landing__task-count">
-                <div class="box">
-                    <div id="box__flex">
-                    <div class="box__header">
-                        <p class="box__logo logo-blue">Bē</p>
-                        <div>
-                            <p class="box__title">portfolio</p>
-                            <p class="box__urg">high</p>
-                        </div>
-                    </div>
-                    <div class="box__expln">
-                        <p>landing page</p>
-                        <p class="box__expln-transp">nilson project</p>
-                    </div>
-                    <div class="box__countdown5">5 days left</div>
-                    </div>
-                </div>
-                <div class="box">
-                    <div id="box__flex">
-                    <div class="box__header">
-                        <p class="box__logo logo-blue">Bē</p>
-                        <div>
-                            <p class="box__title">portfolio</p>
-                            <p class="box__urg">high</p>
-                        </div>
-                    </div>
-                    <div class="box__expln">
-                        <p>landing page</p>
-                        <p class="box__expln-transp">nilson project</p>
-                    </div>
-                    <div class="box__countdown5">5 days left</div>
-                    </div>
-                </div>
-                <div class="box">
-                    <div id="box__flex">
-                    <div class="box__header">
-                        <p class="box__logo logo-blue">Bē</p>
-                        <div>
-                            <p class="box__title">portfolio</p>
-                            <p class="box__urg">high</p>
-                        </div>
-                    </div>
-                    <div class="box__expln">
-                        <p>landing page</p>
-                        <p class="box__expln-transp">nilson project</p>
-                    </div>
-                    <div class="box__countdown5">5 days left</div>
-                    </div>
-                </div>
-                <div class="box">
-                    <div id="box__flex">
-                    <div class="box__header">
-                        <p class="box__logo logo-blue">Bē</p>
-                        <div class="box__title"> 
-                            <p>portfolio</p>
-                            <p class="box__urg">high</p>
-                        </div>
-                    </div>
-                    <div class="box__expln">
-                        <p>landing page</p>
-                        <p class="box__expln-transp">nilson project</p>
-                    </div>
-                    <div class="box__countdown5">5 days left</div>
-                    </div>
-                </div>
-    </div>
-    <div id="landing__task__descr">
-        <span id="landing__task__descr__logo" class="iconify" data-icon="majesticons:pencil-line" data-width ="24"></span>
-        <div id="landing__task__descr__text">
-            <h3>Description</h3>
-            <p>create subtasks for the ...</p>
-        </div>
-        <span class="iconify" data-icon="ic:baseline-navigate-next" data-width="20" ></span>
-    </div>
-    <div id="landing__task__cal"></div>
-</div>
-    </main>
-    
 
-</body>
+
+                <div class="box">
+                    <div id="box__flex">
+                        <div class="box__header">
+                            <div class="box__logo-square blue">
+                                <p class="box__logo">Bē</p>
+                            </div>
+                            <div class="box__title">
+                                <p class="box__title-text">portfolio</p>
+                                <p class="box__title-urg">high</p>
+                            </div>
+                        </div>
+                        <div class="box__expln">
+                            <h4>landing page</h4>
+                            <p class="box__expln-transp">nilson project</p>
+                        </div>
+                        <div class="box__countdown5">5 days left</div>
+                    </div>
+                </div>
+                <div class="box">
+                    <div id="box__flex">
+                        <div class="box__header">
+                            <div class="box__logo-square orange">
+                                <p class="box__logo">Bē</p>
+                            </div>
+                            <div class="box__title">
+                                <p class="box__title-text">portfolio</p>
+                                <p class="box__title-urg">high</p>
+                            </div>
+                        </div>
+                        <div class="box__expln">
+                            <h4>landing page</h4>
+                            <p class="box__expln-transp">nilson project</p>
+                        </div>
+                        <div class="box__countdown5">5 days left</div>
+                    </div>
+                </div>
+                <div class="box">
+                    <div id="box__flex">
+                        <div class="box__header">
+                            <div class="box__logo-square blue">
+                                <p class="box__logo">Bē</p>
+                            </div>
+                            <div class="box__title">
+                                <p class="box__title-text">portfolio</p>
+                                <p class="box__title-urg">high</p>
+                            </div>
+                        </div>
+                        <div class="box__expln">
+                            <h4>landing page</h4>
+                            <p class="box__expln-transp">nilson project</p>
+                        </div>
+                        <div class="box__countdown5">5 days left</div>
+                    </div>
+                </div>
+                <div class="box">
+                    <div id="box__flex">
+                        <div class="box__header">
+                            <div class="box__logo-square orange">
+                                <p class="box__logo">Bē</p>
+                            </div>
+                            <div class="box__title">
+                                <p class="box__title-text">portfolio</p>
+                                <p class="box__title-urg">high</p>
+                            </div>
+                        </div>
+                        <div class="box__expln">
+                            <h4>landing page</h4>
+                            <p class="box__expln-transp">nilson project</p>
+                        </div>
+                        <div class="box__countdown5">5 days left</div>
+                    </div>
+                </div>
+                <div class="box">
+                    <div id="box__flex">
+                        <div class="box__header">
+                            <div class="box__logo-square blue">
+                                <p class="box__logo">Bē</p>
+                            </div>
+                            <div class="box__title">
+                                <p class="box__title-text">portfolio</p>
+                                <p class="box__title-urg">high</p>
+                            </div>
+                        </div>
+                        <div class="box__expln">
+                            <h4>landing page</h4>
+                            <p class="box__expln-transp">nilson project</p>
+                        </div>
+                        <div class="box__countdown5">5 days left</div>
+                    </div>
+                </div>
+                <div class="box">
+                    <div id="box__flex">
+                        <div class="box__header">
+                            <div class="box__logo-square orange">
+                                <p class="box__logo">Bē</p>
+                            </div>
+                            <div class="box__title">
+                                <p class="box__title-text">portfolio</p>
+                                <p class="box__title-urg">high</p>
+                            </div>
+                        </div>
+                        <div class="box__expln">
+                            <h4>landing page</h4>
+                            <p class="box__expln-transp">nilson project</p>
+                        </div>
+                        <div class="box__countdown5">5 days left</div>
+                    </div>
+                </div>
+                <div class="box">
+                    <div id="box__flex">
+                        <div class="box__header">
+                            <div class="box__logo-square blue">
+                                <p class="box__logo">Bē</p>
+                            </div>
+                            <div class="box__title">
+                                <p class="box__title-text">portfolio</p>
+                                <p class="box__title-urg">high</p>
+                            </div>
+                        </div>
+                        <div class="box__expln">
+                            <h4>landing page</h4>
+                            <p class="box__expln-transp">nilson project</p>
+                        </div>
+                        <div class="box__countdown5">5 days left</div>
+                    </div>
+                </div>
+                <div class="box">
+                    <div id="box__flex">
+                        <div class="box__header">
+                            <div class="box__logo-square orange">
+                                <p class="box__logo">Bē</p>
+                            </div>
+                            <div class="box__title">
+                                <p class="box__title-text">portfolio</p>
+                                <p class="box__title-urg">high</p>
+                            </div>
+                        </div>
+                        <div class="box__expln">
+                            <h4>landing page</h4>
+                            <p class="box__expln-transp">nilson project</p>
+                        </div>
+                        <div class="box__countdown5">5 days left</div>
+                    </div>
+                </div>
+            </div>
+            <div id="landing__task__descr">
+                <span id="landing__task__descr__logo" class="iconify" data-icon="majesticons:pencil-line"
+                    data-width="24"></span>
+                <div id="landing__task__descr__text">
+                    <h3>Description</h3>
+                    <p>create subtasks for the ...</p>
+                </div>
+                <span class="iconify" data-icon="ic:baseline-navigate-next" data-width="20"></span>
+            </div>
+            <div id="landing__task__cal">
+                <div id="landing__task__cal__flex">
+                    <div id="landing__task__cal__month">
+                        <i class="fas fa-angle-left"></i>
+                        <div id="landing__task__cal__date">
+                            <h1>december</h1>
+                            <p>mon dec 27, 2021</p>
+                        </div>
+                        <i class="fas fa-angle-right next"></i>
+                    </div>
+                    <div id="landing__task__cal__weekdays">
+                        <div>sun</div>
+                        <div>mon</div>
+                        <div>tue</div>
+                        <div>wed</div>
+                        <div>thu</div>
+                        <div>fri</div>
+                        <div>sat</div>
+                    </div>
+                    <div id="landing__task__cal__days">
+                        <div class="prev-date">28</div>
+                        <div class="prev-date">29</div>
+                        <div class="prev-date">30</div>
+                        <div>1</div>
+                        <div>2</div>
+                        <div>3</div>
+                        <div>4</div>
+                        <div>5</div>
+                        <div>6</div>
+                        <div>7</div>
+                        <div>8</div>
+                        <div>9</div>
+                        <div>10</div>
+                        <div>11</div>
+                        <div>12</div>
+                        <div>13</div>
+                        <div>14</div>
+                        <div>15</div>
+                        <div>16</div>
+                        <div>17</div>
+                        <div>18</div>
+                        <div>19</div>
+                        <div>20</div>
+                        <div>21</div>
+                        <div>22</div>
+                        <div>23</div>
+                        <div>24</div>
+                        <div>25</div>
+                        <div>26</div>
+                        <div>27</div>
+                        <div>28</div>
+                        <div>29</div>
+                        <div>30</div>
+                        <div>31</div>
+                        <div class="next-date">1</div>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
 
 </html>
+
+</body>
