--- a/01-HTML-CSS/09-animations/tamir/tamir.html
+++ b/01-HTML-CSS/09-animations/tamir/tamir.html
@@ -1,18 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="tamir.css">
-    <title>animations</title>
+    <link rel="stylesheet" href="dist/tamir.css">
+    <title>try</title>
 </head>
+
 <body>
-    <div class="wrapper">
-    <div class="box">
+    <nav class="nav">
+        <ul class="nav__manu">
+            <li class="youtube"><a href="https://www.youtube.com/">you<span class="nav__span">tube</span></a></li>
+            <li class="zoom"><a href="https://www.facebook.com/#!/">face<span class="nav__span--activ">book</span></a></li>
+            <li> <a href="https://www.whatsapp.com/">whats<span class="nav__span--green">app</span></a></li>
+            <li> <a href="https://www.instagram.com/">insta<span class="nav__span--pink">gram</span></a></li>
+        </ul>
+    </nav>
+<div class="all">
+    <div class="pupimg">
+        <img src="https://picsum.photos/200" alt="">
     </div>
-    <div class="box2">
+    <div class="pupimg">
+        <img src="https://picsum.photos/200" alt="">
+    </div>
+    <div class="pupimg">
+        <img src="https://picsum.photos/200" alt="">
+    </div>
+    <div class="pupimg">
+        <img src="https://picsum.photos/200" alt="">
     </div>
 </div>
 </body>
+
 </html>
