--- a/01-HTML-CSS/08-Responsive/chaim/index.html
+++ b/01-HTML-CSS/08-Responsive/chaim/index.html
@@ -12,53 +12,54 @@
     <div class="wrapper">
       <article>
   <img src="1.jpg" alt="">
- <p>Lorem ipsum dolor sit amet consectetur, adipist.</p></article>
+ <p>Lorem ipsum dolor</p></article>
   <article>
   <img src="2.jpg" alt="">
-  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p></article>
+  <p>Lorem ipsum dolor.</p></article>
    <article>
    <img src="3.jpg" alt="">
-   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p></article>
+   <p>Lorem ipsum </p></article>
   <article>
     <img src="4.jpg" alt="">
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p></article>
+    <p>Lorem ipsum</p></article>
   <article>
    <img src="5.jpg" alt="">
-   <p>dkfgnbklcckmzLorem ipsum dolor sit amet.</p></article>
+   <p>dkfgnbklcc</p></article>
   <article>
      <img src="6.jpg" alt="">
-     <p>hjhgmkjkjlk;l'fg.</p></article>
+     <p>hjhgmkjkjlk;.</p></article>
      <article>
       <img src="7.jpg" alt=""> 
-      <p>dkfgnbklcckmz>jgnvklcslkLorem.</p></article>
+      <p>dkfgnbklcc.</p></article>
       <article>
    <img src="8.jpg" alt="">
-   <p>dkfgnbklcckmzjukukl</p></article>
+   <p>dkfgnbklc<p></article>
    <article>
      <img src="9.jpg" alt="">
+     <p>dkfgnbklc<p></article>
    </article>
    <article>
     <img src="10.jpg" alt="">
-    <p>dkfgnbklcckmzjgnvklcslkLorem ips </p></article>
+    <p>dkfgnbklcc</p></article>
     <article>
     <img src="11.jpg" alt="">
-    <p>jgnvklcslkLorem ipsum dolo</p></article>  
+    <p>jgnvklcslkLom</p></article>  
     <article>
       <img src="12.jpg" alt="">
-      <p>dkfgnbklcgnvklcslkLorem ip </p></article>                                                                                          
+      <p>dkfgnbklc</p></article>                                                                                          
       <article>
       <img src="13.jpg" alt="">
-      <p>dkfgnbklcck>jgnvklcslkLorem ips </p></article>
+      <p>dkfgnbklcck</p></article>
       <article>
      <img src="14.jpg" alt="">
      <p>dkfgnbklcckmz</p></article>
      <article>
       <img src="15.jpg" alt="">
-      <p>dkfgnbklcckmz</p></article>
+      <p>dkfgnbklc</p></article>
 
      <article>
      <img src="15.jpg" alt="">
-     <p>dkfgnbklcckmz</p></article>
+     <p>dkfgnbklcckm</p></article>
      <article>
      <img src="16.jpg" alt="">
       <p>dkfgnbklcckmz</p></article>
@@ -67,16 +68,16 @@
      <p>dkfgnbklcckmz</p></article>
      <article>
     <img src="18.jpg" alt="">
-     <p>dkfgnbklcckmz</p></article>
+     <p>dkfgnbklcc</p></article>
      <article>
     <img src="19.jpg" alt="">
-     <p>dkfgnbklcckmz</p></article>
+     <p>dkfgnbklcck</p></article>
      <article>
     <img src="20.jpg" alt="">
    <p>dkfgnbklcckmz</p></article>
    <article>
     <img src="11.jpg" alt="">
-     <p>dkfgnbklcckmz</p></article>
+     <p>dkfgnbklcc</p></article>
      <article>
     <img src="12.jpg" alt="">
     <p>dkfgnbklcckmz</p></article>
@@ -106,7 +107,7 @@
        <p>dkfgnbklcckmz</p></article>
        <article>
        <img src="9.jpg" alt="">
-        <p>dkfgnbklcckmz</p></article>
+        <p>dkfgnbklcck</p></article>
     </div>
 </body>
 </html>
