--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/index.html
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/index.html
@@ -5,13 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="dist/style.css">
-  <title>Our Fitness App</title>
+  <title>Document</title>
 </head>
 <body>
-  <div class="MainWrapper">
-    <div class="MainWrapper__Header"></div>
-    <div class="MainWrapper__Content"></div>
-    <div class="MainWrapper__NavBar"></div>
+  <div class="Container">
+    <div class="Container__Header">Header</div>
+    <div class="Container__Navbar">Navbar</div>
+    <div class="Container__Roi">Roi</div>
+    <div class="Container__Wil">Wil</div>
+    <div class="Container__Yael">Yael</div>
   </div>
 </body>
 </html>
