--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/index.html
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/index.html
@@ -18,10 +18,10 @@
     </div>
     <div class="Container__Navbar">
       <div class="Container__Navbar__NContent">
-        <div class="Container__Navbar__NContent--Navbtn"><img src="../Images/home.png"></div>
-        <div class="Container__Navbar__NContent--Navbtn"><img src="../Images/user.png"></div>
-        <div class="Container__Navbar__NContent--Navbtn"><img src="../Images/home.png"></div>
-        <div class="Container__Navbar__NContent--Navbtn"><img src="../Images/home.png"></div>
+        <div class="Container__Navbar__NContent--Navbtn"></div>
+        <div class="Container__Navbar__NContent--Navbtn"></div>
+        <div class="Container__Navbar__NContent--Navbtn"></div>
+        <div class="Container__Navbar__NContent--Navbtn"></div>
       </div>
     </div>
     <div class="Container__Roi">Roi</div>
